--- a/website/pages/payments.html
+++ b/website/pages/payments.html
@@ -53,6 +53,12 @@
     });
 });
 </script>
+
+        <article class="markdown-body">
+                <h1>Payment History</h1>
+
+
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.min.css" />
 {{ function readableDate(a){ return new Date(parseInt(a)).toString(); } }}
 {{ for(var pool in it.stats.pools) { }}
 <table>
@@ -83,3 +89,4 @@
 </table>
 </div>
 {{ } }}
+</article>
