--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <link rel="icon" type="image/png" href="/static/favicon.png"/>
+    <link rel="icon" type="image/png" href="/static/pirate.png"/>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
@@ -21,7 +21,7 @@
     <script src="/static/main.js"></script>
     <link rel="stylesheet" href="/static/style.css">
 
-    <title>s-nomp</title>
+    <title>PIRATE</title>
 
 </head>
 
@@ -30,31 +30,25 @@
 <header>
     <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal">
 
-        <a class="pure-menu-heading hot-swapper" href="/"><i class="fa fa-home"></i>&nbsp;s-nomp</a>
+        <a class="pure-menu-heading hot-swapper" href="/"><i class="fa fa-home"></i>&nbsp;PIRATE</a>
 
         <ul>
-            <li class="{{? it.selected === 'getting_started' }}pure-menu-selected{{?}}">
-                <a class="hot-swapper" href="/getting_started">
-                    <i class="fa fa-rocket"></i>&nbsp;
-                    Getting Started
-                </a>
-            </li>
             <li class="{{? it.selected === 'stats' }}pure-menu-selected{{?}}">
                 <a class="hot-swapper" href="/stats">
                     <i class="fa fa-bar-chart-o"></i>&nbsp;
-                    Graph Stats
-                </a>
-            </li>
-            <li class="{{? it.selected === 'tbs' }}pure-menu-selected{{?}}">
-                <a class="hot-swapper" href="/tbs">
-                    <i class="fa fa-table"></i>&nbsp;
-                    Tab Stats
+                    Pool Stats
                 </a>
             </li>
             <li class="{{? it.selected === 'workers' }}pure-menu-selected{{?}}">
                 <a class="hot-swapper" href="/workers">
                     <i class="fa fa-cogs"></i>&nbsp;
-                    Workers Stats
+                    Worker Stats
+                </a>
+            </li>
+            <li class="{{? it.selected === 'payments' }}pure-menu-selected{{?}}">
+                <a class="hot-swapper" href="/payments">
+                    <i class="fa fa-usd"></i>&nbsp;
+                    Payments
                 </a>
             </li>
             <li class="{{? it.selected === 'api' }}pure-menu-selected{{?}}">
@@ -73,19 +67,6 @@
 
 
 <footer>
-
-    <div>
-        This site is powered by the open source <a target="_blank" href="https://github.com/s-nomp/s-nomp/">s-nomp</a>
-        project created by Joshua Yabut and the Zclassic Community and is licensed under the <a href="https://en.wikipedia.org/wiki/MIT_License">MIT License</a>
-    </div>
-    <div>
-        <i class="fa fa-heart"></i>&nbsp; Support this project by donating&nbsp;<i class="fa fa-btc"></i>&nbsp;BTC: 18vHMxVzotQ9EPyESrf7Z1hNM9AwJeVHgD
-    </div>
-    <div id="communityFooter">
-        Community&nbsp;<i class="fa fa-comment"></i>&nbsp;: &nbsp;<a target="_blank" href="https://zclassic.herokuapp.com">#zclassic IRC</a>
-        &nbsp;&nbsp;|&nbsp;&nbsp;
-        <iframe src="http://ghbtns.com/github-btn.html?user=s-nomp&repo=s-nomp&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="140" height="20"></iframe>
-    </div>
 
 </footer>
 
