--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -1,6 +1,6 @@
 <style>
     #boxWelcome{
-        background-color: #0eafc7;
+        background-color: #444444;
         color: white;
         margin: 18px;
     }
@@ -41,10 +41,13 @@
 
 
     #boxStatsLeft{
-        background-color: #b064e1;
+        background-color: #444444;
     }
+	#boxStatsCenter{
+		background-color: #444444;
+	}
     #boxStatsRight{
-        background-color: #10bb9c;
+        background-color: #444444;
     }
     .boxStats{
         color: white;
@@ -76,15 +79,14 @@
 
 <div class="pure-g-r" id="boxWelcome">
     <div class="pure-u-1-3">
-        <img id="logoImg" src="/static/logo.svg">
+        <img id="logoImg" src="/static/pirate.png">
     </div>
     <div class="pure-u-2-3">
-        <div id="welcomeText">Welcome to the future of mining</div>
+        <div id="welcomeText">PIRATE mining pool</div>
         <ul id="welcomeItems">
-            <li>Low fees</li>
-            <li>High performance Node.js backend</li>
-            <li>User friendly mining client</li>
-            <li>Multi-coin / multi-pool</li>
+            <li>Stratum Host: <b>stratum.pirate.komodopool.xyz</b></li>
+            <li>Low-Diff Port: <b>8888</b> - Hi-Diff Port: <b>18888</b> (NiceHash)</li>
+            <li>Min. payout 1 PIRATE, payouts every 120 sec - 0% pool fee.</li>
         </ul>
     </div>
 </div>
@@ -98,7 +100,7 @@
                 {{ for(var algo in it.stats.algos) { }}
                 <div>
                     <div><i class="fa fa-flask"></i>{{=algo}}</div>
-                    <div><i class="fa fa-users"></i><span id="statsMiners{{=algo}}">{{=it.stats.algos[algo].workers}}</span> Miners</div>
+                    <div><i class="fa fa-users"></i><span id="statsMiners{{=algo}}">{{=it.stats.algos[algo].workers}}</span> Workers</div>
                     <div><i class="fa fa-tachometer"></i><span id="statsHashrate{{=algo}}">{{=it.stats.algos[algo].hashrateString}}</span></div>
                 </div>
                 {{ } }}
@@ -108,15 +110,13 @@
 
     <div class="pure-u-1-2">
         <div class="boxStats" id="boxStatsRight">
-            <div class="boxLowerHeader">Pools / Coins</div>
+            <div class="boxLowerHeader">PIRATE Links</div>
             <div class="boxStatsList">
-                {{ for(var pool in it.stats.pools) { }}
                 <div>
-                    <div><i class="fa fa-dot-circle-o"></i>{{=pool}}</div>
-                    <div><i class="fa fa-users"></i><span id="statsMiners{{=pool}}">{{=it.stats.pools[pool].workerCount}}</span> Miners</div>
-                    <div><i class="fa fa-tachometer"></i><span id="statsHashrate{{=pool}}">{{=it.stats.pools[pool].hashrateString}}</span></div>
+<div><i class="fa fa-dot-circle-o"></i><a style="color: white" href="https://pirate.black" target="blank">Website</a></div>
+<div><i class="fa fa-users"></i><a style="color: white" href="https://bitcointalk.org/index.php?topic=4979549.0" target="_blank">Bitcointalk</a></div>
+<div><i class="fa fa-tachometer"></i><a style="color: white" href="http://http://pirate.explorer.dexstats.info" target="_blank">Explorer</a></div>
                 </div>
-                {{ } }}
             </div>
         </div>
     </div>
